<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/run_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/select_run_time_label"
            android:textColor="#999999"
            android:textSize="14dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#999999" />
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

    	<Button
      		android:id="@+id/minutes_down"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/minus"
      		android:textSize="20dp" />

    	<TextView
    	    android:id="@+id/run_time_minutes"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:text="@string/run_time_generic"
    	    android:textSize="40dp"
    	    android:minWidth="155dp"
      		android:gravity="center_vertical|center_horizontal" />

    	<Button
      		android:id="@+id/minutes_up"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/plus"
      		android:textSize="20dp" />
  		</LinearLayout>
  		
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

    	<Button
      		android:id="@+id/seconds_down"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/minus"
      		android:textSize="20dp" />
    	<TextView
      		android:id="@+id/run_time_seconds"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/run_time_second_generic"
      		android:textSize="40dp"
      		android:minWidth="155dp"
      		android:gravity="center_vertical|center_horizontal" />
    	<Button
      		android:id="@+id/seconds_up"
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:text="@string/plus"
      		android:textSize="20dp" />
  		</LinearLayout>

        <TextView
            android:id="@+id/pullup_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/pullup_number_label"
            android:textColor="#999999"
            android:textSize="14dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#999999" />
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
		<TextView
		    android:id="@+id/pullup_number_text_view"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_marginLeft="5dp"
		    android:gravity="center_vertical"
		    android:minWidth="30dp"
		    android:text="@string/current_pullup_number"
		    android:textSize="22dp" />

        <SeekBar
            android:id="@+id/pull_up_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="20"
            android:progress="10" />  
        </LinearLayout>
        
        
        <TextView
            android:id="@+id/crunches_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/crunches_number_label"
            android:textColor="#999999"
            android:textSize="14dp"
            android:textStyle="bold" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#999999" />
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
		<TextView
		    android:id="@+id/crunches_number_text_view"
		    android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:layout_marginLeft="5dp"
		    android:gravity="center_vertical"
		    android:minWidth="30dp"
		    android:text="@string/current_crunches_number"
		    android:textSize="22dp" />

        <SeekBar
            android:id="@+id/crunches_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50" />  
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:padding="5dp"
	    android:layout_marginTop="5dp"
	    android:background="#DDDDDD" >	
	    
   	    <Button
   	        android:id="@+id/BackButton" 
   	        android:text="@string/back_button"
   	        android:layout_width="100dp" 
   	        android:layout_height="wrap_content" />
   	    
   		<Button
   		    android:id="@+id/NextButton" 
   		    android:text="@string/save_button"
			android:layout_width="100dp"
			android:layout_height="wrap_content" /> 
			 		
	</LinearLayout>	

</LinearLayout>